--- a/templates/tarif/index.html.twig
+++ b/templates/tarif/index.html.twig
@@ -1,40 +1,42 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tarif index
+{% block title %}Tarifs
 {% endblock %}
 
 {% block body %}
-	<h1>Tarif index</h1>
-
-	<ul class="tarifs-list">
-		{% for tarif in tarifs %}
-			<li class="tarif-item">
-				<div class="tarif-info">
-					<p>
-						<strong>Prix de la réservation :</strong>
-						{{ tarif.prixReservation }}
-						€
-					</p>
-					<p>
-						<strong>Prix des options :</strong>
-						{{ tarif.prixOption }}
-						€
-					</p>
-				</div>
-				{% if is_granted('ROLE_ADMIN') %}
-					<div class="tarif-actions">
-						<a class="btn-principal" href="{{ path('app_tarif_show', {'id': tarif.id}) }}">Voir</a>
-						<a class="btn-principal" href="{{ path('app_tarif_edit', {'id': tarif.id}) }}">Modifier</a>
-					</div>
-				{% endif %}
-			</li>
-		{% else %}
-			<p>Aucun tarif trouvé</p>
-		{% endfor %}
-	</ul>
+	<h1>Tarifs</h1>
+	<div class="tarifs-list-container">
+		<div class="user-table">
+			<ul class="tarifs-list">
+				{% for tarif in tarifs %}
+					<li class="tarif-item">
+						<div class="tarif-info">
+							<p>
+								<strong>Prix de la réservation :</strong>
+								{{ tarif.prixReservation }}
+								€
+							</p>
+							<p>
+								<strong>Prix des options :</strong>
+								{{ tarif.prixOption }}
+								€
+							</p>
+						</div>
+						{% if is_granted('ROLE_ADMIN') %}
+							<div class="tarif-actions">
+								<a class="btn-principal" href="{{ path('app_tarif_show', {'id': tarif.id}) }}">Voir</a>
+								<a class="btn-principal" href="{{ path('app_tarif_edit', {'id': tarif.id}) }}">Modifier</a>
+							</div>
+						{% endif %}
+					</li>
+				{% else %}
+					<p>Aucun tarif trouvé</p>
+				{% endfor %}
+			</ul>
+		</div>
+	</div>
 	{% if is_granted('ROLE_ADMIN') %}
 		<a class="btn-principal" href="{{ path('app_tarif_new') }}">Créez un tarif</a>
 	{% endif %}
-
-
+	<a class="btn-principal" href="{{ path('app_home') }}">Retour à l'accueil</a>
 {% endblock %}
