--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,39 +5,36 @@
 
 {% block body %}
 	<div class="conteneur-flex">
-		<div class="hero-section">
-			<div class="hero-content">
-				<h1 class="hero-content-titre">
-					"La Salle de la Thérèsière : un cadre élégant et fonctionnel pour tous vos événements, privés et professionnels."</h1>
-			</div>
-		</div>
-		<div class="bloc">
-			<div id="bloc1">
-				<p>"Une visite vaut mille mots.	Venez découvrir la Salle de la Thérésiére."</p>
-			</div>
-			<div id="bloc2">
-				<p>"Ne laissez pas votre date s'envoler. Réservez la Salle de la Thérésiére maintenant  !"</p>
-			</div>
-			<div id="bloc3">
-				<p>"Simplicité et efficacité. Profitez d'une cuisine équipéé, de sanitaires soignés et d'un accès PMR à la Salle de la Thérésiére, un lieu conçu pour tous."</p>
-			</div>
-			<div id="bloc4">
-				<p>"Ce qui se passe à la Salle de la Thérésiére : découvrez nos actualités."</p>
-			</div>
-		</div>
-		<div class="social-reviews-container">
-			<section class="google-reviews">
-				<h2>Ce que nos clients disent</h2>
-				<p>section en cours de construction</p>
-				{# <div id="elfsight-widget-xyz"></div> #}
-
+		<div class="main-image-container">
+			<section id="bloc1">
+				<p>"La Salle de la Thérèsière : un cadre élégant et fonctionnel pour tous vos événements, privés et professionnels."</p>
 			</section>
-			<div class="social-icons-section">
-				<h2>Nos réseaux sociaux</h2>
-				{{ include('layout/_social_links.html.twig') }}
-			</div>
+		</div>
+		<div class="small-images-container">
+			<section id="bloc2">
+				<p>"Une visite vaut mille mots.	Venez découvrir la Salle de la Thérésiére."</p>
+			</section>
+			<section id="bloc3">
+				<p>"Ne laissez pas votre date s'envoler. Réservez la Salle de la Thérésiére maintenant  !"</p>
+			</section>
+			<section id="bloc4">
+				<p>"Simplicité et efficacité. Profitez d'une cuisine équipéé, de sanitaires soignés et d'un accès PMR à la Salle de la Thérésiére, un lieu conçu pour tous."</p>
+			</section>
+			<section id="bloc5">
+				<p>"Ce qui se passe à la Salle de la Thérésiére : découvrez nos actualités."</p>
+			</section>
 		</div>
 	</div>
+	<div class="social-reviews-container">
+		<section class="google-reviews">
+			<h2>Ce que nos clients disent</h2>
+			<p>section en cours de construction</p>
+			{# <div id="elfsight-widget-xyz"></div> #}
 
-
+		</section>
+		<div class="social-icons-section">
+			<h2>Nos réseaux sociaux</h2>
+			{{ include('layout/_social_links.html.twig') }}
+		</div>
+	</div>
 {% endblock %}
