--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -52,6 +52,13 @@
 						<a href="{{ path('app_categorie_index') }}">Catégories</a>
 					</li>
 				{% endif %}
+				<li class="notification-item">
+					<a href="{{ path('app_messages') }}" class="notification-icon">
+						<i class="fas fa-envelope"></i>
+						{% set unreadCount = unread_messages_count() %}
+						<span class="badge">{{ unreadCount }}</span>
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</div>
