--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -28,8 +28,8 @@
 				<input type="hidden" name="_token" value="{{ csrf_token('desactive' ~ app.user.id) }}">
 				<button type="submit" class="btn-principal">Supprimer mon compte</button>
 			</form>
-				<a class="btn-principal"href="{{ path('app_user_show') }}" class="btn">Retour au profil</a>
+			<a class="btn-principal" href="{{ path('app_user_show') }}" class="btn">Retour au profil</a>
 		</div>
 	</div>
-
+	<a class="btn-principal" href="{{ path('app_home') }}">Retour à l'accueil</a>
 {% endblock %}
