--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -104,11 +104,10 @@
 
 
 		{% if app.user and app.user.id == user.id %}
-			<div class="btn-principal">
-				<a href="{{ path('app_user_edit', {'id': app.user.id}) }}" class="btn">
-					Modifier le profil
-				</a>
-			</div>
+			<a class="btn-principal" href="{{ path('app_user_edit', {'id': app.user.id}) }}">
+				Modifier le profil
+			</a>
 		{% endif %}
 	</div>
+	<a class="btn-principal"href="{{ path('app_home') }}">Retour à l'accueil</a>
 {% endblock %}
