--- a/templates/visite/show.html.twig
+++ b/templates/visite/show.html.twig
@@ -34,13 +34,8 @@
 		</form>
 	{% endif %}
 
-	<button class="btn-principal">
-		<a href="{{ path('app_visite_index') }}">Retour à la liste</a>
-	</button>
-
-	<button class="btn-principal">
-		<a href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a>
-	</button>
+		<a class="btn-principal" href="{{ path('app_visite_index') }}">Retour à la liste</a>
+		<a class="btn-principal"href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a>
 	{% if is_granted('ROLE_ADMIN') %}
 		{{ include('visite/_delete_form.html.twig') }}
 	{% endif %}
