--- a/templates/visite/_delete_form.html.twig
+++ b/templates/visite/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_visite_delete', {'id': visite.id}) }}" onsubmit="return confirm('Êtes-vous sûr(e) de vouloir supprimer?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ visite.id) }}">
-    <button class="btn-principal">Supprimer</button>
+    <button type="submit" class="btn-principal">Supprimer</button>
 </form>
